# GraphRAG_2.0

./: .env.template  .gitignore  README.md  app.py  app_groq.py  app_groq_v2.py  app_v2.py  build_graph_final.py  config.yaml  pyproject.toml  requirements.txt  run_evaluation_v4.py  test_claude.py  test_gemini.py  test_groq.py
.streamlit/: config.toml
evaluation/v2_multi_doc/: answers.json  final_results.json  judgments.json
notebooks/: evaluation_notebook.ipynb  personA_notebook.ipynb  smoke_test.ipynb  smoke_test.py  smoke_test_v2.ipynb  smoke_test_v3.ipynb
scripts/: build_graph.py  ingest_documents.py  run_evaluation.py
src/: __init__.py  chunker.py  community_detection.py  community_summarizer.py  config.py  entity_resolver.py  evaluation.py  graph_builder.py  graph_query.py  graph_traversal.py  llm_client.py  query_engine.py  router.py  vector_store.py
tests/: __init__.py  test_chunker.py  test_config.py  test_entity_resolver.py  test_router.py
