[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag"
version = "1.0.0"
description = "Graph-Based Retrieval-Augmented Generation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "spacy>=3.7",
    "tiktoken>=0.6",
    "google-generativeai>=0.5",
    "groq>=0.5",
    "anthropic>=0.30",
    "httpx>=0.27",
    "networkx>=3.2",
    "graspologic>=3.3",
    "leidenalg>=0.10",
    "chromadb>=0.4",
    "pymupdf>=1.23",
    "sentence-transformers>=2.6",
    "streamlit>=1.32",
    "pandas>=2.0",
    "igraph>=0.11",
]

[project.scripts]
build-graph = "scripts.build_graph:main"
run-evaluation = "scripts.run_evaluation:main"
ingest-documents = "scripts.ingest_documents:main"
